Fixed growl line heights. Fixed Many to Many not showing if fully tagged. Updated Many to Many to return items to the drop down when they are removed.

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -319,7 +319,7 @@
 	#growl article span { display: inline-block; }
 	#growl article .close { background: url(../images/icon-sprite.png) -136px -106px; height: 10px; margin: -9px 0 0 214px; position: absolute; width: 10px; }
 	#growl article section { float: right; width: 170px; }
-	#growl article section h3 { color: #fff; font-size: 13px; line-height: 13px; margin: 0 0 5px 0; text-shadow: 0 -1px 0 rgba(0,0,0,0.75); }
+	#growl article section h3 { color: #fff; font-size: 13px; line-height: 17px; margin: -2px 0 3px 0; text-shadow: 0 -1px 0 rgba(0,0,0,0.75); }
 	#growl article section p { color: #eee; font-size: 12px; margin: 0; padding: 0; text-shadow: 0 -1px 0 rgba(0,0,0,0.75); }
 	
 	.icon_growl_success { background: url(../images/icon-sprite.png) 0px -106px; height: 34px; width: 34px; }
